# FES-dynamometer-feedback-loop

./: README.md  calibration_data.yaml  config.yaml  fes_controller.py  pyproject.toml  system.py  vision_core.py
EMGReader/: CMakeLists.txt  emg_metrics.cpp  emg_metrics.h  emg_wave_widget.cpp  emg_wave_widget.h  i24session.cpp  i24session.h  main.cpp  mainwindow.cpp  mainwindow.h
EMGReader/ScienceMode_Library/: ScienceMode_Library.pri  ScienceMode_Library.pro
EMGReader/ScienceMode_Library/include/dyscom-level/: smpt_dl_client.h  smpt_dl_definitions.h  smpt_dl_definitions_data_types.h  smpt_dl_packet_client.h  smpt_dl_packet_server.h  smpt_dl_packet_utils.h  smpt_dl_packet_validity.h
EMGReader/ScienceMode_Library/include/general/: smpt_client.h  smpt_client_cmd_lists.h  smpt_client_data.h  smpt_client_power.h  smpt_client_utils.h  smpt_definitions.h  smpt_definitions_data_types.h  smpt_definitions_file_transfer.h  smpt_definitions_internal.h  smpt_definitions_power.h  smpt_file.h  smpt_messages.h  smpt_packet_number_generator.h
EMGReader/ScienceMode_Library/include/low-level/: smpt_ll_client.h  smpt_ll_definitions.h  smpt_ll_definitions_data_types.h  smpt_ll_messages.h  smpt_ll_packet_client.h  smpt_ll_packet_server.h  smpt_ll_packet_validity.h
EMGReader/ScienceMode_Library/include/mid-level/: smpt_ml_client.h  smpt_ml_definitions.h  smpt_ml_definitions_data_types.h  smpt_ml_packet_client.h  smpt_ml_packet_server.h  smpt_ml_packet_utils.h  smpt_ml_packet_validity.h
EMGReader/ScienceMode_Library/src/dyscom-level/: smpt_dl_client.c  smpt_dl_packet_client.c  (+4 more)
csv/: received_values_20260202_170103.csv
hasomed_fes/: CMakeLists.txt  main.c
(+50 files in other folders)
